[package]
name = "juniper_relay_connection"
version = "0.1.1"
authors = ["Tilman Roeder"]
edition = "2018"
repository = "https://github.com/dyedgreen/juniper-relay"
license = "MIT"
description = "Relay style pagination for Juniper."
keywords = ["juniper", "relay", "graphql"]
categories = ["web-programming"]
exclude = [".github"]

[dependencies]
juniper = "0.15"
